--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             <div class="prompt" style="width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); position: fixed; top: 0; left: 0; z-index: 9999; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                 <div class="prompt-content" style="width: 50%; height: 50%; background-color: #2f3136; border-radius: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                     <h1 style="color: white; font-size: 30px; margin-bottom: 10px;">Watcher</h1>
-                    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Please add <code>?profileid=</code> to the url</h3>
-                    <a href="https://dash.watcherbot.me" class="btn" style="color: white; justify-content: right; align-items: right; display: flex; flex-direction: row; margin-left: 10px; margin-right: 10px; margin-bottom: 10px; background-color: #7289da; border-radius: 5px; padding: 10px;">
+                    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Please add <code>?profileid=</code><input class="textinput" type="text" placeholder="693553429380857978" style="background-color: #1c1e20; color: white; border: none; border-radius: 5px; padding: 5px; margin-left: 5px; margin-right: 5px; padding-top: 5px; width: 100px; height: 20px; text-align: center;"> to the url</h3>
+                    <button class="btn" style="color: white; justify-content: right; align-items: right; display: flex; flex-direction: row; margin-left: 10px; margin-right: 10px; margin-bottom: 10px; background-color: #7289da; border-radius: 5px; padding: 10px; border: transparent;" onclick="
+                    window.location.href = 'https://dash.watcherbot.me/?profileid=' + document.querySelector('.textinput').value
+                    ">
                         <i class="fas fa-arrow-left" style="margin-right: 10px;"></i>
                         Okay
-                    </a>
+                    </button>
                 </div>
             </div>
             `;
